QRMatrix/qrmatrixextramode.h

typedef enum {
    /// none
    XModeNone,
    /// MicroQR
    XModeMicroQr,
    /// FNC1 First Position
    XModeFnc1First,
    /// FNC2 Second Position
    XModeFnc1Second
} QrmExtraMode;
typedef struct {
    /// Extra mode
    QrmExtraMode mode;
    /// A C-String represents Application Indicator for FNC1 Second Position.
    /// 2 valid forms:
    ///  - Single ASCII character [a-z][A-Z] eg. `a`.
    ///  - Two ditis number eg. `01`
    UnsignedByte* appIndicator;
    UnsignedByte appIndicatorLength;
} QrmExtraEncodingInfo;
typedef struct {
    /// Data segments
    QrmSegment* segments;
    /// Count of segments
    unsigned int count;
    /// Error correction info
    QrmErrorCorrectionLevel level;
    /// Optional. Limit minimum version
    /// (result version = max(minimum version, required version to fit data).
    UnsignedByte minVersion;
    /// Optional. Force to use given mask (0-7).
    /// Almost for test, you can ignore this.
    UnsignedByte maskId;
    /// Extra mode (MicroQR will be ignored. Not sure about FNC1.)
    QrmExtraEncodingInfo extraMode;
} QrmStructuredAppend;