String/unicodepoint.h

typedef struct {
    Unsigned4Bytes* raw;
    unsigned int length;
} UnicodePoint;