String/shiftjisstring.h

/// Shift-JIS 2 bytes
typedef struct {
    bool isValid;
    /// Not NULL terminated.
    UnsignedByte* raw;
    unsigned int charCount;
    unsigned int byteCount;
    unsigned int minBytesPerChar;
    unsigned int maxBytesPerChar;
    UnsignedByte* charsMap;
} ShiftJisString;
/// Get Unicode characters code points (decoded data).
UnicodePoint SjToUnicodes(ShiftJisString source);