Examples/06.Flutter/lib/qrmatrixexample_bindings_generated.dart


  late final _SjToUnicodesPtr =
      _lookup<ffi.NativeFunction<UnicodePoint Function(ShiftJisString)>>(
          'SjToUnicodes');
  late final _SjToUnicodes =
      _SjToUnicodesPtr.asFunction<UnicodePoint Function(ShiftJisString)>();
}

/// QR Encoding Mode
abstract class QrmEncodingMode {
  /// 0-9
  static const int EModeNumeric = 1;

  /// 0-9, A-Z, $, %, *, +, -, ., /, :, ' '
  static const int EModeAlphaNumeric = 2;

  /// ISO-8859-1 (Unicode Latin-1)
  static const int EModeByte = 4;

  /// Shift JIS double-byte characters
  static const int EModeKanji = 8;
}

/// QR Error correction level
abstract class QrmErrorCorrectionLevel {
  /// L 7%
  static const int ELevelLow = 1;

  /// M 15%
  static const int ELevelMedium = 0;

  /// Q 25%
  static const int ELevelQuarter = 3;

  /// H 30%
  static const int ELevelHigh = 2;
}

/// Value of QR board cell
abstract class QrmBoardCell {
  /// Cell is not filled yet
  static const int CellNeutral = 0;

  /// Cell is white (lower 4 bits)
  static const int CellUnset = 5;

  /// Cell is black (lower 4 bits)
  static const int CellSet = 10;

  /// Cell is finder (higher 4 bits)
  static const int CellFinder = 16;

  /// Cell is separator (higher 4 bits)
  static const int CellSeparator = 32;

  /// Cell is alignment (higher 4 bits)
  static const int CellAlignment = 48;

  /// Cell is timing (higher 4 bits)
  static const int CellTiming = 64;

  /// Cell is dark module (higher 4 bits)
  static const int CellDark = 80;

  /// Cell is format (higher 4 bits)
  static const int CellFormat = 96;

  /// Cell is version (higher 4 bits) (version ≥ 7)
  static const int CellVersion = 112;

  /// Cell is ErrorCorrection
  static const int CellErrorCorrection = 128;

  /// Cell is Remainder
  static const int CellRemainder = 144;

  /// cell & lowMask = lower 4 bits value
  static const int CellLowMask = 15;

  /// cell & highMask = higher 4 bits value
  static const int CellHighMask = 240;

  /// cell & funcMask > 0 => cell is function module
  static const int CellFuncMask = 112;
}

/// QR cells (modules) (not inclues quiet zone)
final class QrmBoard extends ffi.Struct {
  @UnsignedByte()
  external int dimension;

  external ffi.Pointer<ffi.Pointer<UnsignedByte>> buffer;
}

typedef UnsignedByte = ffi.UnsignedChar;

/// Info to make QR Code
final class QrmSymbolInfo extends ffi.Struct {
  /// QR Version
  @UnsignedByte()
  external int version;

  /// EC level
  @ffi.Int32()
  external int level;

  /// Number of data bytes
  @Unsigned2Bytes()
  external int codewords;

  /// Number of EC bytes per block
  @Unsigned2Bytes()
  external int ecCodewordsPerBlock;

  /// Number of group1 blocks
  @Unsigned2Bytes()
  external int group1Blocks;

  /// Number of data bytes for 1 group1 block
  @Unsigned2Bytes()
  external int group1BlockCodewords;

  /// Number of group2 blocks
  @Unsigned2Bytes()
  external int group2Blocks;

  /// Number of data bytes for 1 group2 block
  @Unsigned2Bytes()
  external int group2BlockCodewords;
}

typedef Unsigned2Bytes = ffi.UnsignedShort;

/// Hold information of input data for 1 QR segment.
final class QrmSegment extends ffi.Struct {
  @ffi.Int32()
  external int mode;

  @ffi.UnsignedInt()
  external int length;

  external ffi.Pointer<UnsignedByte> data;

  @ffi.UnsignedInt()
  external int eci;
}

abstract class QrmExtraMode {
  /// none
  static const int XModeNone = 0;

  /// MicroQR
  static const int XModeMicroQr = 1;

  /// FNC1 First Position
  static const int XModeFnc1First = 2;

  /// FNC2 Second Position
  static const int XModeFnc1Second = 3;
}

final class QrmExtraEncodingInfo extends ffi.Struct {
  /// Extra mode
  @ffi.Int32()
  external int mode;

  /// A C-String represents Application Indicator for FNC1 Second Position.
  /// 2 valid forms:
  /// - Single ASCII character [a-z][A-Z] eg. `a`.
  /// - Two ditis number eg. `01`
  external ffi.Pointer<UnsignedByte> appIndicator;

  @UnsignedByte()
  external int appIndicatorLength;
}

final class QrmStructuredAppend extends ffi.Struct {
  /// Data segments
  external ffi.Pointer<QrmSegment> segments;

  /// Count of segments
  @ffi.UnsignedInt()
  external int count;

  /// Error correction info
  @ffi.Int32()
  external int level;

  /// Optional. Limit minimum version
  /// (result version = max(minimum version, required version to fit data).
  @UnsignedByte()
  external int minVersion;

  /// Optional. Force to use given mask (0-7).
  /// Almost for test, you can ignore this.
  @UnsignedByte()
  external int maskId;

  /// Extra mode (MicroQR will be ignored. Not sure about FNC1.)
  external QrmExtraEncodingInfo extraMode;
}

final class UnicodePoint extends ffi.Struct {
  external ffi.Pointer<Unsigned4Bytes> raw;

  @ffi.UnsignedInt()
  external int length;
}

typedef Unsigned4Bytes = ffi.UnsignedInt;

/// Handle unicode (UTF-8) from std::string
final class Utf8String extends ffi.Struct {
  @ffi.Bool()
  external bool isValid;

  external ffi.Pointer<UnsignedByte> raw;

  @ffi.UnsignedInt()
  external int charCount;

  @ffi.UnsignedInt()
  external int byteCount;

  @ffi.UnsignedInt()
  external int maxBytesPerChar;

  external ffi.Pointer<UnsignedByte> charsMap;
}

/// ISO/IEC 8859-1; equivalent of Unicode Latin-1 block
final class LatinString extends ffi.Struct {
  @ffi.Bool()
  external bool isValid;

  /// Note: not NULL ternminated.
  external ffi.Pointer<UnsignedByte> raw;

  @ffi.UnsignedInt()
  external int length;
}

/// Shift-JIS 2 bytes
final class ShiftJisString extends ffi.Struct {
  @ffi.Bool()
  external bool isValid;

  /// Not NULL terminated.
  external ffi.Pointer<UnsignedByte> raw;

  @ffi.UnsignedInt()
  external int charCount;

  @ffi.UnsignedInt()
  external int byteCount;

  @ffi.UnsignedInt()
  external int minBytesPerChar;

  @ffi.UnsignedInt()
  external int maxBytesPerChar;

  external ffi.Pointer<UnsignedByte> charsMap;
}

const int LOGABLE = 0;

const int LOG_MEM = 0;

const String VERSION = '1.1.0';

const int DEFAULT_ECI_ASSIGMENT = 3;
